# seg-entry

./: .dockerignore  .gitignore  DEVELOPER_INTERFACE_GUIDE.md  Dockerfile  MEDSAM2_POC_DISPATCH_GUIDE.md  MODEL_INTEGRATION_STANDARD.md  ORTHANC_INTEGRATION_SPEC.md  README.md  main.py  pyproject.toml
examples/: request_medsam2_liver_prompt.json  request_mrsegmentator_mr_abdomen_organs.json  request_orthanc_totalseg_liver_ct.json  request_totalseg_liver_ct.json
seg_entry/: __init__.py  api.py  cli.py  contracts.py  errors.py  gpu.py  http_server.py  inputs.py  paths.py  registry.py  service.py
seg_entry/adapters/: base.py  medsam2.py  mrsegmentator.py  totalsegmentator.py
