[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "seg-entry"
version = "0.1.0"
description = "Standardized entry service for medical image segmentation workflows."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
seg-entry = "seg_entry.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["seg_entry"]
